# mlir-calculator

./: CMakeLists.txt  README.md
calculatorc/: CMakeLists.txt  calculatorc.cpp
include/Calculator/: CMakeLists.txt  CalculatorDialect.h  CalculatorDialect.td  CalculatorOps.h  CalculatorOps.td  Generator.h  LLVMHelpers.h  Lexer.h  Lower.h  Parser.h
include/Standalone/: StandaloneOps.td
lib/Calculator/: CMakeLists.txt  CalculatorDialect.cpp  CalculatorOps.cpp  LLVMHelpers.cpp  Lexer.cpp  Lower.cpp  Parser.cpp
mathc/: CMakeLists.txt  mathc.cpp
